test/fail/lambdas/lambda_return.lly
#[
SyntaxError: 'return' not allowed in a lambda.
    from lambda_return.lly:6:
]#

var v = (|| return )
